<resources>
    <!-- Name of App -->
    <string name="app_name">HIGIV</string>

    <!-- Login / Register / Account -->
    <string name="prompt_password">Password (optional)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="btn_login">Log in</string>
    <string name="btn_link_to_register">Register</string>
    <string name="btn_link_to_login">I already have an account. Login!</string>
    <string name="title_activity_reset_password">Reset Password Activity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="lbl_create_account">Create an account</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you the password reset instructions.</string>

    <!-- Main Activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="travel">Travel</string>
    <string name="find_spot">Find spot</string>
    <string name="send_alert">Send alert</string>
    <string name="nav_application">Application</string>
    <string name="nav_about">About</string>
    <string name="edit_profil">Edit profil</string>


    <!-- Edit User page -->
    <string name="FirstnameEditPage">Firstname</string>
    <string name="LastnameEditPage">Lastname</string>
    <string name="GenderEditPage">Gender</string>
    <string name="EditButtonEditPage">Save</string>
    <string name="MenEditPage">Man</string>
    <string name="womenEditPage">Woman</string>
    <string name="otherEditPage">Others</string>
    <string name="ProfilVerificationToast">Please fill up all the fields</string>
    <string name="DeleteProfil">Deleted profile</string>
    <string name="DeleteUserButton">Delete User</string>
    <string name="PhoneEditPage">Emergency phone</string>

    <!-- Detail User page -->
    <string name="EmailDetailProfil">Email:</string>
    <string name="GenderDetailProfil">Gender:</string>
    <string name="EditButtonDetailProfile">Edit profile</string>
    <string name="ProfileLabelDetailProfile">Profile</string>
    <string name="ResetPwdButton">Reset password</string>
    <string name="GenderMale">Mr.</string>
    <string name="GenderFemale">Ms.</string>
    <string name="GenderOther">Other</string>

    <!-- Travel -->
    <string name="destination">Destination</string>
    <string name="plate_number">Plate number</string>
    <string name="btn_create_travel">Create a travel</string>
    <string name="number_of_person">Number of person</string>
    <string name="CreationTravelSuccessful">Travel created !</string>
    <string name="CreationTravelFailed">Travel creation failed !</string>
    <string name="btn_begin_travel">Begin</string>
    <string name="btn_stop_travel">Stop</string>
    <string name="btn_send_alert">Send alert</string>
    <string name="enter_destination">Enter destination please</string>
    <string name="enter_state">"Enter state please "</string>
    <string name="enter_plate_number">Enter the plate number of the car</string>
    <string name="enter_nb_person">How many people you are?</string>
    <string name="travel_overview">Travel overview</string>
    <string name="car_plate">Car plate</string>
    <string name="safe_travel">Enjoyed the ride ?</string>
    <string name="satisfied">Good to hear you have enjoyed your ride !</string>
    <string name="unsatisfied">Sorry to hear you didn\'t enjoy your ride !</string>
    <string name="bad_happens">Something wen\'t wrong, please retry</string>

    <!-- File uploads -->
    <string name="uploading">Uploading</string>
    <string name="file_uploaded">File Uploaded</string>

    <!--Send message-->
    <string name="dialogSendMessage">Do you really want to send an alert message?</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogCancel">Cancel</string>
    <string name="messageSendToast">Message Sent</string>
    <string name="permissionNotActivToast">Activate the permission to access the SMS</string>
    <string name="phoneNumberDontExist">You haven\'t entered a phone number!</string>
    <string name="messageContainAlert">-----ALERT-----</string>
    <string name="messageContainUser">is in danger!</string>
    <string name="messageContainPlate">Plate number:</string>
    <string name="messageContainLocalisation">Geolocation at the time of the alert:</string>


    <!-- Sign Up -->
    <string name="SignUp_EnterEmail">Enter email address!</string>
    <string name="SignUp_EnterPwd">Enter password!</string>
    <string name="SignUp_SuccessfulCreation">Account successfully created!</string>
    <string name="SignUp_AuthFailed">Authentification failed! Account already created?</string>

    <!-- Camera -->
    <string name="FailedDirectoryCreation">Failed to create directory </string>

    <!-- Maps -->
    <string name="WrongServicesMap">You can\'t make map requests</string>
    <string name="NoDeviceLocation">Unable to retrieve the device\'s location</string>
    <string name="NoPermissionsLocation">Location permission not granted</string>
    <string name="NoPermissionsLocationForTravel">Please enable the location to create a travel</string>
    <string name="SnackBarButtonText">Location Permissions</string>
    <string name="SnackBarButtonActionText">Enable Location</string>


    <!-- About  / Settings -->
    <string name="TextAbout">This project has been carried out by students from the HES-SO</string>
    <string name="DeleteUserSettings">Delete your account</string>
    <string name="ChooseLanguage">Language</string>
    <string name="sign_in">Sign in or register</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset password</string>
    <string name="cancel">Cancel</string>
    <string name="failed_again">Failed again</string>
    <string name="get_text_from_image_failed">Could not obtain the text</string>
    <string name="create_directory_failed">Failed to create a directory</string>
    <string name="add_comment">Add a comment</string>
    <string name="send_comment">Send a comment</string>
    <string name="send_reset_email_failed">Failed to send a reset email</string>
    <string name="password_too_short">Password too short, enter 6 characters minimum</string>
    <string name="enter_registered_email">Enter your registered email</string>
    <string name="saved">Saved!</string>
    <string name="instructions_reset_password">We sent you instructions to reset your password</string>
    <string name="take_picture">Take a picture of the plate</string>
    <string name="askPasswordDeleteAccount">Enter your account to delete your account</string>
    <string name="accountDeleted">Your profile is deleted</string>
    <string name="failDeleteAccount">Failed to delete your account</string>
    <string name="Finish_travel">Finish travel</string>
    <string name="Finish_travel_confirmation">Are you sure you\'ve finished the trip?</string>
    <string name="Add_comment">Add a comment</string>
    <string name="Send_comment">Send comment</string>
    <string name="NoCameraPermission">Please enable the camera permissions</string>
    <string name="PictureOfPlate">Please take a picture of the car plate where we can clearly see the plate number</string>
    <string name="PictureOfPlateTitle">Car plate picture</string>


</resources>
