<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Travel.TravelOnGoing">



    <TextView
        android:id="@+id/travel_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/travel_overview"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:columnCount="2"
        android:orientation="horizontal"
        app:layout_optimizationLevel="standard">

        <TextView
            android:id="@+id/destination_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="16dp"
            android:padding="0dp"
            android:text="@string/destination"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/travel_overview" />


        <TextView
            android:id="@+id/destination_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/travel_overview" />

        <TextView
            android:id="@+id/car_plate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="16dp"
            android:padding="0dp"
            android:text="@string/car_plate"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destination_label" />

        <TextView
            android:id="@+id/car_plate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destination_tv" />

        <TextView
            android:id="@+id/number_persons_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="16dp"
            android:padding="0dp"
            android:text="@string/number_of_person"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_plate_label" />

        <TextView
            android:id="@+id/number_persons_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_plate_tv" />


        <Button
            android:id="@+id/btn_send_alert"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_send_alert"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_cancel_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_stop_travel"
            android:textColor="@android:color/white" />
    </GridLayout>




</LinearLayout>